<resources>
    <string name="app_name">NearMe_app</string>
    <string name="se_connecter">Se Connecter</string>
    <string name="email_ou_nom_d_utilisateur">Email ou nom d\'utilisateur</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="passer">Passer</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="continuer">Continuer</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="connection_avec_apple">Connection avec Apple</string>
    <string name="ou_via_les_r_seaux_sociaux">ou via les réseaux sociaux</string>
    <string name="veuillez_saisir_votre_email_d_inscription_et_votre_mot_de_passe">Veuillez saisir votre email d’inscription et votre mot de passe.</string>
    <string name="near_me">NEAR ME</string>
    <string name="x_logo">X logo</string>
    <string name="categorie">Categorie</string>
    <string name="logo">Logo</string>
    <string name="explorer_les_nombreux_services_qu_on_vous_offres">Explorer les nombreux services qu’on vous offres</string>
    <string name="trouver_des_services">Trouver des services</string>
    <string name="my_interests">My Interests</string>
    <string name="saved_gigs">Saved Gigs</string>
    <string name="get_inspared">Get Inspared</string>
    <string name="manage_request">Manage Request</string>
    <string name="post_request">Post Request</string>
    <string name="setting">Setting</string>
    <string name="show_online_status">Show online status</string>
    <string name="payement">Payement</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="become_a_seller">Become a seller</string>
    <string name="support">Support</string>
    <string name="ou_s_inscrire_avec">ou s\'inscrire avec</string>
    <string name="psswrd">******</string>
    <string name="email">Email</string>
    <string name="title_activity_mots_de_passe_oublier">MotsDePasseOublierActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="recherche">Recherche</string>
    <string name="plus">Plus</string>
    <string name="courriel">Courriel</string>
    <string name="profile">Profile</string>
    <string name="tout_afficher">Tout afficher</string>
    <string name="cat_gories_populaires">Catégories Populaires</string>
    <string name="test">test</string>
    <string name="envoyer_une_demande_de_changement_de_mot_de_passe">Envoyer une demande de changement de mot de passe</string>
    <string name="envoyer">Envoyer</string>
    <string name="se_connecter_avec">Se connecter avec</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="logogoogle">logoGoogle</string>
    <string name="logofacebook">logofacebook</string>
    <string name="changer_de_mot_de_passe">Changer de Mot De Passe</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe</string>
    <string name="reecrire_a_nouveau">Reecrire a nouveau</string>
    <string name="ancien_mot_de_passe">Ancien mot de passe</string>
    <string name="informations_g_n_rales">Informations générales</string>
    <string name="image_guest">image Guest</string>
    <string name="tableau_dimage">Tableau_dimage</string>
</resources>