<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".InscriptionActivity">

    <TextView
        android:id="@+id/instruction_"
        android:layout_width="179dp"
        android:layout_height="27dp"
        android:layout_marginTop="40dp"
        android:text="Se connecter avec"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConnexion"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/MotDePasseOublié"
        android:layout_width="148dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:text="@string/mot_de_passe_oubli"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <TextView
        android:id="@+id/connexion2"
        android:layout_width="131dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:text="@string/se_connecter"
        android:textAlignment="center"
        android:textSize="24sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/allerInscription"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toEndOf="@+id/passer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Near Me"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="normal|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        tools:ignore="HardcodedText,MissingConstraints" />

    <TextView
        android:id="@+id/allerInscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:text="S'inscrire"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/passer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:background="#00000000"
        android:contentDescription="@string/x_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />


    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="350dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="352dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        app:endIconMode="password_toggle"
        android:ems="10"
        android:hint="@string/psswrd"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />


    <Button
        android:id="@+id/btnConnexion"
        android:layout_width="351dp"
        android:layout_height="55dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/btn_bg"
        android:text="@string/continuer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MotDePasseOublié" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="73dp"
        android:layout_height="59dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connexion2"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/google"
        android:layout_width="51dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/facebook"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction_"
        app:srcCompat="@drawable/google"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction_"
        app:srcCompat="@drawable/facebook"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>