<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="1"
            tools:listitem="@layout/logo_2" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="138dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="236dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categoriePopulaire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal"
                    tools:itemCount="1"
                    tools:listitem="@layout/carte_categorie" />
            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/acceuil_textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/cat_gories_populaires"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/accueil_textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:text="@string/tout_afficher"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/accueil_explorer"
            android:layout_width="355dp"
            android:layout_height="185dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:background="#2D000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

            <ImageView
                android:id="@+id/imageView2test"
                android:layout_width="72dp"
                android:layout_height="95dp"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="10dp"
                tools:srcCompat="@tools:sample/avatars"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/test" />

            <ImageView
                android:id="@+id/imageView3test"
                android:layout_width="69dp"
                android:layout_height="62dp"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="107dp"
                tools:srcCompat="@tools:sample/avatars"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/test" />

            <ImageView
                android:id="@+id/imageView4test"
                android:layout_width="84dp"
                android:layout_height="88dp"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="10dp"
                tools:srcCompat="@tools:sample/avatars"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/test" />

            <ImageView
                android:id="@+id/imageView5test"
                android:layout_width="69dp"
                android:layout_height="66dp"
                tools:layout_editor_absoluteX="270dp"
                tools:layout_editor_absoluteY="103dp"
                tools:srcCompat="@tools:sample/avatars"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/test" />

            <ImageView
                android:id="@+id/imageView6test"
                android:layout_width="68dp"
                android:layout_height="59dp"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="110dp"
                tools:srcCompat="@tools:sample/avatars"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/test" />

            <ImageView
                android:id="@+id/imageView7test"
                android:layout_width="135dp"
                android:layout_height="61dp"
                tools:layout_editor_absoluteX="201dp"
                tools:layout_editor_absoluteY="13dp"
                tools:srcCompat="@tools:sample/avatars"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/test" />

            <ImageView
                android:id="@+id/imageView8test"
                android:layout_width="78dp"
                android:layout_height="58dp"
                tools:layout_editor_absoluteX="180dp"
                tools:layout_editor_absoluteY="107dp"
                tools:srcCompat="@tools:sample/avatars"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/test" />

            <TextView
                android:id="@+id/accueil_textView3test"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/explorer_les_nombreux_services_qu_on_vous_offres"
                android:textColor="#2196F3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="77dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="369dp"
            android:layout_height="47dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="114dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00782626"
                android:hint="@string/trouver_des_services" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>